<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Make Lemonade!</string>
    <string name="action_settings">Settings</string>
    <string name="title_stand">Stand</string>
    <string name="title_market">Market</string>
    <string name="title_bank">Bank</string>
    
    <string name="label_status_money">Money: </string>
    <string name="status_money">   </string>
    
    <string name="label_status_time">Time: </string>
    <string name="status_time">   </string>
	
	
    <string name="summary_title">Today\'s Summary</string>
    <string name="game_saved">Game Saved</string>
    <string name="game_loaded">Game Loaded</string>
    
    <string name="pause_save">Save</string>
    <string name="pause_mainmenu">Main Menu</string>
    <string name="pause_glossary">Glossary</string>
    <string name="pause_howto">How To</string>
	
	<string name="day_summary">Summary</string>
    <string name="yes">Yes</string>
   <string name="ok_to_exit">Are you sure you want to exit?</string>
    <string name="ok">Ok</string>
    <string name="game_not_saved">Game is not saved</string>
    <string name="cancel">Cancel</string>
    <string name="closed">Closed</string>
    <string name="game_over">Game Over</string>
	
	<!--  MainMenu strings -->
    <string name="dialog_title">Select Game</string>
    <string-array name="dialog_options">
        <item >Level 1: new game</item>
        <item >Level 1: saved game</item>
        <item >Level 2: new game</item>
        <item >Level 2: saved game</item>
    </string-array>
    
    <!-- how to page strings -->
    <string name="instructionsTitle">How To Play</string>
    <string name="instructions">Put the instructions here!!!</string>
    
    <!-- stand fragment strings -->
	<string name="lemons">L: </string>
	<string name="sugar">S: </string>
	<string name="cups">C: </string>
	<string name="ice">I: </string>

	
	<!-- market fragment strings -->
	<string name="buy">BUY</string>
	<string name="cant_buy_title">Invalid Purchase</string>
	<string name="cant_buy_text">Your purchase exceeds the amount of
	    money that you have. You must reduce total cost 
	    of the purchase</string>
	<string name="plus">+</string>
    <string name="minus">-</string>
    <string name="emptycost">$0.00</string>
	
	
	<!-- bank fragment strings -->
    
    <!-- navigation drawer stuff -->
    <string-array name="Pause_OptionList">
        <item >Main Menu</item>
        <item >Save</item>
        <item >Exit</item>
        <item >How To Play</item>
        <item >Glossary</item>
    </string-array>
    <string name="drawer_open">Game Paused</string>
    <string name="drawer_close">Game Unpaused</string>
    

</resources>

