<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/standbackground2"  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="horizontal" >
		
		 <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            style="@style/button_text"
            android:text="@string/lemons" />
        <TextView
            android:id="@+id/text_lemonadeCnt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            style="@style/button_text"
             />

        <Button
            android:id="@+id/makeBtn"
            android:background="@drawable/orange_button"
            style="@style/button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="MAKE" />
	    
	</LinearLayout>

    <GridLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:columnCount="2"
        android:gravity="center_horizontal"
        android:rowCount="2" >	
		<!-- lemon count text -->
	    <LinearLayout
	        android:layout_width="100dip"
	        android:layout_height="wrap_content" 
	        android:orientation="horizontal"
	        android:layout_margin="5dp"
	        android:layout_column="0"
     		android:layout_row="0">
			        
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginRight="5dp"
		            android:textSize="25sp"
		            android:text="@string/lemons" />
		        <Space
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_weight="1" />
		        <TextView
		            android:id="@+id/text_lemonCnt"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="25sp"
		             />
		        <Space
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_weight="1" />
		    </LinearLayout>
		    
	    	<!-- cup count text -->
	    	<LinearLayout
		        android:layout_width="100dip"
		        android:layout_height="wrap_content" 
		        android:orientation="horizontal"
		        android:layout_margin="5dp"
		        android:layout_column="1"
	     		android:layout_row="0">
			        
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginRight="5dp"
		            android:textSize="25sp"
		            android:text="@string/cups" />
		        <Space
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_weight="1" />
		        <TextView
		            android:id="@+id/text_cupCnt"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="25sp"
		             />
		        <Space
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_weight="1" />
		    </LinearLayout>
		
		    <!-- ice count text -->
	    	<LinearLayout
		        android:layout_width="100dip"
		        android:layout_height="wrap_content" 
		        android:orientation="horizontal"
		        android:layout_margin="5dp"
		        android:layout_column="0"
     			android:layout_row="1">
		        
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginRight="5dp"
		            android:textSize="25sp"
		            android:text="@string/ice" />
		        <Space
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_weight="1" />
		        <TextView
		            android:id="@+id/text_iceCnt"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="25sp"
		             />
		        <Space
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_weight="1" />
		    </LinearLayout>
		    
	    	<!-- sugar count text -->
		    	<LinearLayout
		        android:layout_width="100dip"
		        android:layout_height="wrap_content" 
		        android:orientation="horizontal"
		        android:layout_margin="5dp"
		        android:layout_column="1"
	     		android:layout_row="1">
		        
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginRight="5dp"
		            android:textSize="25sp"
		            android:text="@string/sugar" />
		        <Space
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_weight="1" />
		        <TextView
		            android:id="@+id/text_sugarCnt"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="25sp"
		             />
		        <Space
		            android:layout_width="wrap_content"
		            android:layout_height="match_parent"
		            android:layout_weight="1" />
		    </LinearLayout>
		    	
		    
	</GridLayout>
	
		
    <!-- stand with buttons and price -->
	 <RelativeLayout
	         android:layout_width="200dp"
	         android:layout_height="wrap_content"
	         android:layout_marginTop="50dp"
	         android:orientation="vertical" >
			 
			<Button android:id="@+id/plusBtn" 
			     android:layout_width="50dp"
			     android:layout_height="wrap_content" 
			     android:layout_marginRight="20dp" 
			     android:layout_margin="10dp"
		         android:layout_alignParentRight="true"
		         android:background="@drawable/orange_button"
            	 style="@style/button_text"
			     android:text="+"/>
			<Button android:id="@+id/minusBtn" 
			     android:layout_width="50dp"
			     android:layout_height="wrap_content"
			     android:layout_marginRight="20dp" 
			     android:layout_margin="10dp"
		         android:layout_below="@id/plusBtn"
		         android:layout_alignParentRight="true"
		         android:background="@drawable/orange_button"
            	 style="@style/button_text"
			     android:text="-"/>

			<TextView
			    android:id="@+id/priceText"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_centerVertical="true"
			    android:layout_margin="20dp"
			    android:background="@color/White"
			    android:text="$0.25"
			    android:textSize="25sp"
			    android:textStyle="bold" />

	</RelativeLayout>
		
</LinearLayout>
