<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent" 
        android:layout_height="match_parent"  >
        
	     <RelativeLayout 
		   android:layout_width="match_parent"
		   android:layout_height="wrap_content"
		   android:orientation="vertical" 
		   android:background="@color/LightSkyBlue">
	
	     <TextView
		      android:id="@+id/marketTitle"
		      android:layout_width="match_parent"
		      android:layout_height="wrap_content"
		      android:layout_centerHorizontal="true"
		      android:layout_alignParentTop="true"
		      android:gravity="center"
		      android:background="@drawable/textlines"
		      android:text="MarketPlace"
		      android:textStyle="bold"
		      android:textSize="30sp" />
    
	    <TableLayout
	        android:id="@+id/supplyTable"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/marketTitle" >
	
	        <!-- Lemon Row -->
	        <TableRow
	            android:id="@+id/tableRow1"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" 
	            android:background="@drawable/textlines"
	            android:gravity="center">
	            
	            <LinearLayout
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginRight="70dp"
				    android:orientation="vertical"
				    android:gravity="center_vertical" >
		             <TextView
				        android:id="@+id/lemontitle"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:gravity="center_vertical"
				        android:text="Lemons"
				        android:textStyle="bold"
				        android:textSize="20sp" />
		             <TextView
				        android:id="@+id/secondLine"
				        android:layout_width="fill_parent"
				        android:layout_height="26dip"
				        android:ellipsize="marquee"
				        android:singleLine="true"
				        android:text="$1.00"
				        android:textSize="17sp" />
				</LinearLayout>
	            
	             
	            <!-- amount of items chooser -->
		            <Button
			            android:id="@+id/minusLemon"
			            android:layout_width="50dp"
			            android:layout_height="wrap_content"
			            android:background="@drawable/orange_button"
	            		style="@style/button_text"
			            android:text="@string/minus" />
		            
		            <TextView
		                android:id="@+id/lemonAmt"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_marginRight="5dp"
			            android:layout_marginLeft="5dp"
			            android:textSize="25sp"
			            android:text="0" />
		            
		            <Button
		                android:id="@+id/plusLemon"
		                android:layout_width="50dp"
		                android:layout_height="wrap_content"
		                android:background="@drawable/orange_button"
	            		style="@style/button_text"
		                android:text="@string/plus" />
	
	        </TableRow>
	
	        <!-- Cup Row -->
	        <TableRow
	            android:id="@+id/tableRow2"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" 
	            android:gravity="center"
	            android:background="@drawable/textlines" >
		            
	             <LinearLayout
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginRight="70dp"
				    android:orientation="vertical"
				    android:gravity="center_vertical" >
		             <TextView
				        android:id="@+id/cuptitle"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:gravity="center_vertical"
				        android:text="Cups"
				        android:textStyle="bold"
				        android:textSize="20sp"  />
		             <TextView
				        android:id="@+id/secondLine2"
				        android:layout_width="fill_parent"
				        android:layout_height="26dip"
				        android:ellipsize="marquee"
				        android:singleLine="true"
				        android:text="$1.00"
				        android:textSize="17sp" />
				</LinearLayout>
	            
	             
	            <!-- amount of items chooser -->
		            <Button
			            android:id="@+id/minusCups"
			            android:layout_width="50dp"
		                android:layout_height="wrap_content"
		                android:background="@drawable/orange_button"
	            		style="@style/button_text"
			            android:text="@string/minus" />
		            
		            <TextView
		                android:id="@+id/cupsAmt"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_marginRight="5dp"
			            android:layout_marginLeft="5dp"
			            android:textSize="25sp"
			            android:text="0" />
		            
		            <Button
		                android:id="@+id/plusCups"
		                android:layout_width="50dp"
		                android:layout_height="wrap_content"
		                android:background="@drawable/orange_button"
	            		style="@style/button_text"
		                android:text="@string/plus" />
	            
	        </TableRow>
	
	        
	        <!-- Sugar Row -->
	        <TableRow
	            android:id="@+id/tableRow3"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" 
	            android:background="@drawable/textlines"
	            android:gravity="center" >
		            
	             <LinearLayout
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginRight="70dp"
				    android:orientation="vertical"
				    android:gravity="center_vertical" >
		             <TextView
				        android:id="@+id/sugartitle"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:gravity="center_vertical"
				        android:text="Sugar"
				        android:textStyle="bold"
				        android:textSize="20sp"  />
		             <TextView
				        android:id="@+id/secondLine3"
				        android:layout_width="fill_parent"
				        android:layout_height="26dip"
				        android:ellipsize="marquee"
				        android:singleLine="true"
				        android:text="$1.00"
				        android:textSize="17sp" />
				</LinearLayout>
	            
	             
	            <!-- amount of items chooser -->
		            <Button
			            android:id="@+id/minusSugar"
			            android:layout_width="50dp"
		                android:layout_height="wrap_content"
		                android:background="@drawable/orange_button"
	            		style="@style/button_text"
			            android:text="@string/minus" />
		            
		            <TextView
		                android:id="@+id/sugarAmt"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_marginRight="5dp"
			            android:layout_marginLeft="5dp"
			            android:textSize="25sp"
			            android:text="0" />
		            
		            <Button
		                android:id="@+id/plusSugar"
		                android:layout_width="50dp"
		                android:layout_height="wrap_content"
		                android:background="@drawable/orange_button"
	            		style="@style/button_text"
		                android:text="@string/plus" />
	        </TableRow>
	
	        <!-- Ice Row -->
	        <TableRow
	            android:id="@+id/tableRow4"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" 
	            android:gravity="center"
	            android:background="@drawable/textlines" >
		            
	             <LinearLayout
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginRight="70dp"
				    android:orientation="vertical"
				    android:gravity="center_vertical" >
		             <TextView
				        android:id="@+id/icetitle"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:gravity="center_vertical"
				        android:text="Ice"
				        android:textStyle="bold"
				        android:textSize="20sp"  />
		             <TextView
				        android:layout_width="fill_parent"
				        android:layout_height="26dip"
				        android:ellipsize="marquee"
				        android:singleLine="true"
				        android:text="$1.00"
				        android:textSize="17sp" />
				</LinearLayout>
	            
	             
	            <!-- amount of items chooser -->
		            <Button
			            android:id="@+id/minusIce"
			           android:layout_width="50dp"
		                android:layout_height="wrap_content"
		                android:background="@drawable/orange_button"
	            		style="@style/button_text"
			            android:text="@string/minus" />
		            
		            <TextView
		                android:id="@+id/iceAmt"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_marginRight="5dp"
			            android:layout_marginLeft="5dp"
			            android:textSize="25sp"
			            android:text="0" />
		            
		            <Button
		                android:id="@+id/plusIce"
		                android:layout_width="50dp"
		                android:layout_height="wrap_content"
		                android:background="@drawable/orange_button"
	            		style="@style/button_text"
		                android:text="@string/plus" />
	        </TableRow>
	        
	        <!-- Advertising Row -->
	        <TableRow
	            android:id="@+id/tableRow5"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" 
	            android:gravity="center"
	            android:background="@drawable/textlines" >
		            
	             <LinearLayout
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_marginRight="30dp"
				    android:orientation="vertical"
				    android:gravity="center_vertical" >
		             <TextView
				        android:id="@+id/adtitle"
				        android:layout_width="fill_parent"
				        android:layout_height="wrap_content"
				        android:gravity="center_vertical"
				        android:text="Advertising"
				        android:textStyle="bold"
				        android:textSize="20sp"  />
		             <TextView
				        android:layout_width="fill_parent"
				        android:layout_height="26dip"
				        android:ellipsize="marquee"
				        android:singleLine="true"
				        android:text="$1.00"
				        android:textSize="17sp" />
				</LinearLayout>
	            
	             
	            <!-- amount of items chooser -->
		            <Button
			            android:id="@+id/minusAds"
			            android:layout_width="50dp"
		                android:layout_height="wrap_content"
		                android:background="@drawable/orange_button"
	            		style="@style/button_text"
			            android:text="@string/minus" />
		            
		            <TextView
		                android:id="@+id/adsAmt"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_marginRight="5dp"
			            android:layout_marginLeft="5dp"
			            android:textSize="25sp"
			            android:text="0" />
		            
		            <Button
		                android:id="@+id/plusAds"
		                android:layout_width="50dp"
		                android:layout_height="wrap_content"
		                android:background="@drawable/orange_button"
	            		style="@style/button_text"
		                android:text="@string/plus" />
	        </TableRow>
	    </TableLayout>
	    
	    <!-- cost and buy button -->
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/supplyTable"
	        android:background="@color/GrassGreen"
	        android:gravity="center"
	        android:orientation="horizontal" >
	
	        <TextView
	            android:id="@+id/totalCost"
	            android:text="@string/emptycost"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="90dp"
	            android:textSize="30sp"
	            android:textStyle="bold" />
	
	        <Button
	            android:id="@+id/buyBtn"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_margin="10dp"
	            android:text="@string/buy"
	            android:textStyle="bold"
	            android:textSize="25sp"
	            android:background="@drawable/yellow_button"
	             />
	    </LinearLayout>

    </RelativeLayout>
    
</ScrollView>

       

